# dma_traffic_generator

./: .gitignore  DESIGN.md  README.md  pyproject.toml  pytest.ini
config/hw/: byrp_v1.yaml  display_v2.yaml  isp_v3.yaml  mcfp_v1.yaml  mcsc_v1.yaml  mfc_v7.yaml  mtnr_v1.yaml  rgbp_v1.yaml  yuvp_v1.yaml
config/scenario/: isp_capture_4k.yaml  isp_capture_4k_mtnr.yaml  isp_preview_4k_30fps.yaml
dma_traffic_gen/: __init__.py  __main__.py  cli.py  formats.py
dma_traffic_gen/address/: __init__.py  pattern.py  sbwc.py
dma_traffic_gen/config/: __init__.py  hw_schema.py  loader.py  scenario_schema.py  yaml_io.py
dma_traffic_gen/core/: __init__.py  clock.py  simulator.py  transaction.py
dma_traffic_gen/dma/: __init__.py  base.py  image_dma.py  mtnr_dma.py  random_dma.py  stat_dma.py
dma_traffic_gen/output/: __init__.py  graph.py  summary.py  writer.py
tests/: test_address_pattern.py  test_clock.py  test_loader_links.py  test_mtnr_dma.py  test_sbwc.py  test_stat_dma.py  test_summary.py
